fixed scrollbar

--- a/css/scrollbar.scss
+++ b/css/scrollbar.scss
@@ -20,3 +20,7 @@ $secondary-color: #8cefe9;
   ::-webkit-scrollbar-thumb:hover {
     background-color: rgba($color: $secondary-color, $alpha: 0.8)
   }
+
+  html{
+    overflow-x: hidden;
+  }
